--- a/2101.06436/main.tex
+++ b/2101.06436/main.tex
@@ -64,7 +64,7 @@ bookmarksopenlevel=10
 \author{James Ladyman}
 \email{james.ladyman@bristol.ac.uk}
 \affiliation{Department of Philosophy, University of Bristol, Cotham House, Bristol, BS6 6JL, UK}
-\date{\today}
+\date{16 Jan 2021}
 
 \begin{abstract}
 
@@ -76,7 +76,7 @@ Harrigan and Spekkens give formal definitions for the wavefunction in quantum me
 
 \section{Introduction}
 
-Quantum mechanics describes the behaviour of subatomic particles. Unlike classical mechanics, where particles are attributed particular values of position and momentum, quantum mechanics attributes wavefunctions, which give probability amplitudes for possible values of position, momentum and other observables. The products of the standard deviation of position and the momentum (and other pairs of incompatible observables) have a minimum value given by the uncertainty principle \cite{Kennard1927Quantenmechanik}, but otherwise the situation seems similar to how a probability distribution is used to represent incomplete knowledge of a state. For example, probability functions in classical statistical mechanics are used because, while we do not know the exact state of all the particles in a gas, we do know a lot about them on average - these probability distributions reflect knowledge about the distribution of particles over microstates. So, perhaps the wavefunction in quantum mechanics represents knowledge about quantum particles (is epistemic) and does not represent the real state of particles (is not ontic).
+Quantum mechanics describes the behaviour of subatomic particles. Unlike classical mechanics, where particles are attributed particular values of position and momentum, quantum mechanics attributes wavefunctions, which give probability amplitudes for possible values of position, momentum and other observables. The products of the standard deviation of position and the momentum (and other pairs of incompatible observables) have a minimum value given by the uncertainty principle \cite{Kennard1927Quantenmechanik}, but otherwise the situation seems similar to how a probability distribution is used to represent incomplete knowledge of a state. For example, probability functions in classical statistical mechanics are used because, while we do not know the exact state of all the particles in a gas, we do know a lot about them on average --- these probability distributions reflect knowledge about the distribution of particles over microstates. So, perhaps the wavefunction in quantum mechanics represents knowledge about quantum particles (is epistemic) and does not represent the real state of particles (is not ontic).
 
 A very influential paper by Harrigan and Spekkens gives formal definitions for the wavefunction being $\psi$-ontic or $\psi$-epistemic, such that the wavefunction can only be one or the other \cite{Harrigan2010Nonlocality}. On the contrary, we argue that nothing about the informal ideas of epistemic and ontic interpretations or states rules out wavefunctions representing both reality and knowledge. If this is right then the now standard definitions create a false dichotomy. There are interpretations that are intended to be exclusively epistemic, such as Fuch's Quantum Bayesianism (QBism), which treat the wavefunction as representing knowledge about possible results, rather than a physical state of the world \cite{Fuchs2002Info,Fuchs2014QBism}, or exclusively ontic, such as dynamical collapse theories \cite{Penrose1996Gravity, Ghirardi1986Unified}), Bohmian mechanics \cite{Bohm1952Suggested} and Everett's relative-state interpretation \cite{Everett1957Relative}, which take the wavefunction to represent something physical. However, this is no reason to define epistemic and ontic interpretations exclusively, because the informal ideas do not exclude each other, as the next section shows. The following sections explain Harrigan and Spekkens's formalisation, and show how their definitions of $\psi$-ontology and $\psi$-epistemicism simply presuppose that the wavefunction cannot represent both knowledge and reality.
 
@@ -86,7 +86,7 @@ Wavefunctions, like particle coordinates or vector fields, are part of the mathe
 
 In his influential review of the PBR theorem, Matt Leifer says that an ontic state represents `something that objectively exists in the world, independently of any observer or agent' \cite{Leifer2014Review}. This is stronger than the definition above because it rules out that the term also represents our knowledge of the world as well. He gives the example of the ontic state of a single classical particle being its position and momentum.\footnote{Leifer's corresponding example of an epistemic state is then the probability distribution over the particle's phase space.}
 
-On the other hand, a term in physical theory has an epistemic interpretation (is an `epistemic state') when it is taken to represent knowledge of the world \emph{to some extent or other}. This seems a reasonable response to the peculiarity of quantum mechanics - phenomena such as contextuality, entanglement and collapse could involve incomplete knowledge and Bayesian updating of assigned probabilities. This has led to interpretations of the wavefunction as representing \emph{only} knowledge (as in QBism, and also Ben-Menahem's interpretation of ``quantum probabilities as objective constraints on the information made available by measurement" \cite{Benmenahem2017PBR}).
+On the other hand, a term in physical theory has an epistemic interpretation (is an `epistemic state') when it is taken to represent knowledge of the world \emph{to some extent or other}. This seems a reasonable response to the peculiarity of quantum mechanics --- phenomena such as contextuality, entanglement and collapse could involve incomplete knowledge and Bayesian updating of assigned probabilities. This has led to interpretations of the wavefunction as representing \emph{only} knowledge (as in QBism, and also Ben-Menahem's interpretation of ``quantum probabilities as objective constraints on the information made available by measurement" \cite{Benmenahem2017PBR}).
 
 Simon Friedrich says a ($\psi$-)epistemic interpretation is any view according to which ``quantum states do not represent features of physical reality, but reflect, in some way to be specified, the epistemic relations of the agents who assign them to systems they are assigned to'' \cite{friederich2014Interpreting}. So he (and Leifer) agree that epistemic and ontic interpretations are exclusive of each other, so that an epistemic interpretation of a term rules out that the term represents the world as well (and this is so for Harrigan and Spekkens too as explained in the next section). On the other hand, our definitions do not make them exclusive of each other (and the positive second part of Friederich's definition of a ($\psi$-)epistemic interpretation is very similar to our definition of one).
 
@@ -134,7 +134,7 @@ By restricting this to the subspace $\Lambda_\psi$, we define
     \end{split}
 \end{equation}
 
-If $\Delta>0$, this overlap of $p(\lambda\vert\varphi)$ and $\Lambda_\psi$ is taken to imply that the two wavefunctions in this model are epistemic states, because the same underlying state $\lambda$ could be represented by either depending on what it known about the system.\footnote{However, note, this doesn't mean that they necessarily represent the underlying state equally well - for a given $\lambda$ in this overlap, $p(\lambda\vert\psi)$ needn't equal $p(\lambda\vert\varphi)$.} Harrigan and Spekkens take the existence of two distinct wavefunctions with overlapping support within a model as necessary and sufficient for that model being $\psi$-epistemic (and not $\psi$-ontic). The idea is that, since the wavefunction is not determined by the underlying state, so that two different wavefunctions can represent it, some other factor must fix the wavefunction, and that factor is what is known about the system.
+If $\Delta>0$, this overlap of $p(\lambda\vert\varphi)$ and $\Lambda_\psi$ is taken to imply that the two wavefunctions in this model are epistemic states, because the same underlying state $\lambda$ could be represented by either depending on what it known about the system.\footnote{However, note, this doesn't mean that they necessarily represent the underlying state equally well --- for a given $\lambda$ in this overlap, $p(\lambda\vert\psi)$ needn't equal $p(\lambda\vert\varphi)$.} Harrigan and Spekkens take the existence of two distinct wavefunctions with overlapping support within a model as necessary and sufficient for that model being $\psi$-epistemic (and not $\psi$-ontic). The idea is that, since the wavefunction is not determined by the underlying state, so that two different wavefunctions can represent it, some other factor must fix the wavefunction, and that factor is what is known about the system.
 
 Harrigan and Spekkens claim all models that don't meet their criterion for being $\psi$-epistemic are $\psi$-ontic, based on how, classically, states can be either ontic (points on state space) or epistemic (probability distributions on state space) as discussed above.\footnote{Schlosshauer and Fine apply the terms Mixed and Segregated to these quantum models, rather than $\psi$-epistemic and $\psi$-ontic \cite{Schlosshauer2012Implications}, which better characterises the divide in wavefunction overlap.}
 
@@ -145,7 +145,7 @@ Harrigan and Spekkens give three subcategories of $\psi$-ontology. In the strong
 
 \section{Analysing Harrigan and Spekkens's Definitions}
 
-In Harrigan and Spekkens's framework, only $\psi$-epistemic models allow multiple wavefunctions to overlap on the same underlying real state of the world (see Fig. \ref{fig:Graphs}A). Although, given the assumptions of the Ontological Models formalism, this is a sufficient condition for a model being interpreted epistemically, it is not a necessary one, because it is possible that knowledge is included in the wavefunction but this one-to-one mapping still holds (i.e. $\Delta=0$) - an epistemic model without wavefunction overlap on state space.
+In Harrigan and Spekkens's framework, only $\psi$-epistemic models allow multiple wavefunctions to overlap on the same underlying real state of the world (see Fig. \ref{fig:Graphs}A). Although, given the assumptions of the Ontological Models formalism, this is a sufficient condition for a model being interpreted epistemically, it is not a necessary one, because it is possible that knowledge is included in the wavefunction but this one-to-one mapping still holds (i.e. $\Delta=0$) --- an epistemic model without wavefunction overlap on state space.
 
 An even broader condition would be that it is sufficient for a model to be interpreted epistemically when the response functions for individual $\lambda$ within a wavefunction's support $\Lambda_\psi$ for a given variable $A$, aren't equal to the Born probability for the wavefunction for that variable:
 \begin{equation}
@@ -156,11 +156,11 @@ An even broader condition would be that it is sufficient for a model to be inter
 \end{equation}
 This condition implies the Born probability is just the weighted average of response functions over $\Lambda_\psi$, rather than directly related to the specific $\lambda$ representing the actual state of the world. All cases of overlap obey this condition, as within $\Lambda_\psi$, $\mathcal{A}(\psi\vert\lambda)=1$, but $p^\varphi_A(\psi)=\vert\braket{\psi}{\varphi}\vert^2$ which isn't equal to 1 if $\psi\neq\varphi$. However, we can also imagine cases without overlap obeying this condition for an epistemic interpretation, as it applies to the response function of any variable, rather than one giving a final result of measurement of a system attributed the state $\psi$ whatever that is.
 
-Harrigan and Spekkens's criterion for a model being $\psi$-ontic - that wavefunctions never have overlapping support in the space of undelying states - assumes it cannot also be $\psi$-epistemic by definition.
+Harrigan and Spekkens's criterion for a model being $\psi$-ontic --- that wavefunctions never have overlapping support in the space of undelying states --- assumes it cannot also be $\psi$-epistemic by definition.
 
-$\psi$-ontic models, in their formalism, either take the wavefunction to be the exact underlying state, or as representing some reduced-information element of the state. What they ignore is that this reduced-information representation might need to be supplemented to get anything usable as a wavefunction. This would imply a wavefunction could represent an element of reality at its core, but also vary depending on additional factors - such as the knowledge of the observer. The wavefunction could represent both a part of the underlying state of the world, and an observer's knowledge of it. Wavefunctions representing different elements of reality could still be disjoint, but, because of the supplementing factor (e.g. differing knowledge), wouldn't have to be.
+$\psi$-ontic models, in their formalism, either take the wavefunction to be the exact underlying state, or as representing some reduced-information element of the state. What they ignore is that this reduced-information representation might need to be supplemented to get anything usable as a wavefunction. This would imply a wavefunction could represent an element of reality at its core, but also vary depending on additional factors --- such as the knowledge of the observer. The wavefunction could represent both a part of the underlying state of the world, and an observer's knowledge of it. Wavefunctions representing different elements of reality could still be disjoint, but, because of the supplementing factor (e.g. differing knowledge), wouldn't have to be.
 
-Even assuming the Ontological Models Framework, our above definition for an ontic interpretation of $\psi$ just requires that the Born probability $p^\psi_A(S)$ depends somewhat on the underlying state $\lambda$. The only time this is not the case is when any overlap of wavefunctions in state space entirely corresponds to the inner product of those wavefunctions - therefore
+Even assuming the Ontological Models Framework, our above definition for an ontic interpretation of $\psi$ just requires that the Born probability $p^\psi_A(S)$ depends somewhat on the underlying state $\lambda$. The only time this is not the case is when any overlap of wavefunctions in state space entirely corresponds to the inner product of those wavefunctions --- therefore
 \begin{equation}
 \begin{split}
     \neg(\Delta(\psi,\varphi)=\vert\braket{\psi}{\varphi}\vert^2,\;\forall\psi,\varphi)\\
@@ -172,17 +172,17 @@ Leifer and Maroney, and separately Ballentine, have proven that the only time th
 
 Since $p^\psi_A(S)$ depending on $\lambda$ ($\Delta$ not having to equal $\vert\braket{\psi}{\varphi}\vert^2,\;\forall\psi,\varphi$) doesn't necessarily imply it is entirely determined by $\lambda$ ($\Delta$ being 0 $\forall\psi,\varphi$), it can meet the conditions for being both ontic and epistemic.
 
-Harrigan and Spekkens admit that all models that aren't $\psi$-complete could be said to have an epistemic character, especially where multiple states map onto one wavefunction, given this associates the wavefunction with a probability distribution over state space. However, they say they are instead interested only in pure quantum states - hence their definitions being based on overlap, given they claim, with pure states, ``$\psi$ has an ontic character if and only if a variation of $\psi$ implies a variation of reality and an epistemic character if and only if a variation of $\psi$ does not necessarily imply a variation of reality" \cite{Harrigan2010Nonlocality}. Hardy agrees, saying, given no overlap between the support of wavefunctions on the underlying state, we could deduce the wavefunction from $\lambda$, which he takes to mean the wavefunction would be written into the underlying reality of the world \cite{Hardy2013QStatesReal}. However, this is questionable, given, as we said earlier, correlation between $\lambda$ and a wavefunction doesn't necessarily make that wavefunction physical, any more than the correspondence between your fingers and the numbers 1-10 makes those numbers physical \cite{Schlosshauer2012Implications} (which is why we earlier defined wavefunction-ontic as the wavefunction representing the real state, rather than being real itself).
+Harrigan and Spekkens admit that all models that aren't $\psi$-complete could be said to have an epistemic character, especially where multiple states map onto one wavefunction, given that this associates the wavefunction with a probability distribution over state space. However, they say they are instead interested only in pure quantum states --- hence their definitions being based on overlap, given they claim, with pure states, ``$\psi$ has an ontic character if and only if a variation of $\psi$ implies a variation of reality and an epistemic character if and only if a variation of $\psi$ does not necessarily imply a variation of reality" \cite{Harrigan2010Nonlocality}. Hardy agrees, saying, given no overlap between the support of wavefunctions on the underlying state, we could deduce the wavefunction from $\lambda$, which he takes to mean the wavefunction would be written into the underlying reality of the world \cite{Hardy2013QStatesReal}. However, this is questionable, given, as we said earlier, that correlation between $\lambda$ and a wavefunction doesn't necessarily make that wavefunction physical, any more than the correspondence between your fingers and the numbers 1-10 makes those numbers physical \cite{Schlosshauer2012Implications} (which is why we earlier defined wavefunction-ontic as the wavefunction representing the real state, rather than being real itself).
 
-Further, considering the wavefunction to be ontic if and only if variation in it implies variation in the underlying state ignores that, while ontic models require that the wavefunction represent an element of reality, they need not only represent that. Even for pure states, so long as we are not considering a $\psi$-complete model, there is always some factor supplementing the wavefunction in the full underlying state of the world - so, conversely, knowledge could supplement that representation of reality to give us the wavefunction. Therefore, there is no reason for change in wavefunction to imply change in reality in an ontic model, even for pure states.
+Further, considering the wavefunction to be ontic if and only if variation in it implies variation in the underlying state ignores the fact that while ontic models require that the wavefunction represent an element of reality, they need not represent {\it only} such an element. Even for pure states, so long as we are not considering a $\psi$-complete model, there is always some factor supplementing the wavefunction in the full underlying state of the world --- so, conversely, knowledge could supplement that representation of reality to give us the wavefunction. Therefore, there is no reason for change in wavefunction to imply change in reality in an ontic model, even for pure states.
 
-This is demonstrated by $\psi$-dependent models \cite{Schlosshauer2012Implications}. In a $\psi$-dependent model, the response functions depends on $\psi$ - individual overlap possibilities for each possible state are given by the relevant measurement probabilities, rather than being uniform. The simplest case of this is when $p_\psi$ is uniform across $\Lambda_\psi$, as, to retrieve the Born probabilities, $\mathcal{A}^\psi(S,\lambda)$ must then depend on $\psi$. As the wavefunction still to some degree reflects the underlying state, these models are ontic in our sense. However, they also allow overlap of wavefunctions on state space, making them $\psi$-epistemic - Schlosshauer and Fine give an ontic model which is also $\psi$-epistemic, also showing models can be both.
+This is demonstrated by $\psi$-dependent models \cite{Schlosshauer2012Implications}. In a $\psi$-dependent model, the response functions depends on $\psi$ --- individual overlap possibilities for each possible state are given by the relevant measurement probabilities, rather than being uniform. The simplest case of this is when $p_\psi$ is uniform across $\Lambda_\psi$, as, to retrieve the Born probabilities, $\mathcal{A}^\psi(S,\lambda)$ must then depend on $\psi$. As the wavefunction still to some degree reflects the underlying state, these models are ontic in our sense. However, they also allow overlap of wavefunctions on state space, making them $\psi$-epistemic --- Schlosshauer and Fine give an ontic model which is also $\psi$-epistemic, also showing models can be both.
 
 \section{Consequences}
 
-In the light of the above we can create wavefunction-epistemic models of the wavefunction which circumvent no-go arguments typically applied to wavefunctions being epistemic - such as the Pusey-Barrett-Rudolph (PBR) argument.
+In the light of the above we can create wavefunction-epistemic models of the wavefunction which circumvent no-go arguments typically applied to wavefunctions being epistemic --- such as the Pusey-Barrett-Rudolph (PBR) argument.
 
-Pusey et al showed, given certain assumptions, that any model that is $\psi$-epistemic by Harrigan and Spekkens's criterion (i.e. allows wavefunction-overlap on state space) always contradicts quantum theory \cite{Pusey2012OnTheReality}. However, these assumptions (as given by Leifer \cite{Leifer2014Review}) assume the definition of $\psi$-epistemic as the wavefunction only representing knowledge about an underlying state.\footnote{The key assumption of Pusey et al's argument, and other no-go theorems aiming to prove the incompatibility of $\psi$-epistemic models with quantum physics, is referred to as Preparation Independence Postulate (PIP). This assumes that any two systems prepared separately can be assumed not to have elements of their underlying states correlated (that two separate states together can just be represented by their tensor product). This is not a trivial assumption \cite{Lewis2012Compatible} - it does not just rule out superdeterminism (non-causal correlations), but any correlation between two separately-prepared subsystems. Given the underlying state posited by the ontological models framework is that of the world, rather than that of any individual system, and subsystems often have hidden correlations (off-diagonal density-matrix terms) in quantum mechanics, we cannot arbitrarily say the extent to which any two real systems are separable.}
+Pusey et al showed, given certain assumptions, that any model that is $\psi$-epistemic by Harrigan and Spekkens's criterion (i.e. allows wavefunction-overlap on state space) always contradicts quantum theory \cite{Pusey2012OnTheReality}. However, these assumptions (as given by Leifer \cite{Leifer2014Review}) assume the definition of $\psi$-epistemic as the wavefunction only representing knowledge about an underlying state.\footnote{The key assumption of Pusey et al's argument, and other no-go theorems aiming to prove the incompatibility of $\psi$-epistemic models with quantum physics, is referred to as Preparation Independence Postulate (PIP). This assumes that any two systems prepared separately can be assumed not to have elements of their underlying states correlated (that two separate states together can just be represented by their tensor product). This is not a trivial assumption \cite{Lewis2012Compatible} --- it does not just rule out superdeterminism (non-causal correlations), but any correlation between two separately-prepared subsystems. Given the underlying state posited by the ontological models framework is that of the world, rather than that of any individual system, and subsystems often have hidden correlations (off-diagonal density-matrix terms) in quantum mechanics, we cannot arbitrarily say the extent to which any two real systems are separable.}
 
 By taking the wavefunction to also represent elements of reality, we can circumvent the PBR argument, while still allowing overlap. For instance, we can do this by creating models of the wavefunction like Schlosshauer and Fine's, where, due to $\psi$-dependence, overlap between wavefunctions on state space can exist, but be set to go to 0 when wavefunctions are orthogonal, avoiding PBR-contradiction.
 
@@ -192,10 +192,10 @@ On our view, the wavefunction can represent both elements of reality as it is in
 
 \section{Conclusion}
 
-Even in the ontological models framework, models can be simultaneously ontic and epistemic - the wavefunction can represent both elements of reality, and elements of an observer's knowledge about that reality. Harrigan's and Spekkens's terms, $\psi$-ontic and $\psi$-epistemic, do not formalise the informal ideas correctly. In light of the above analysis, all current no-go theorems for the wavefunction representing knowledge (such as the PBR theorem, Colbeck and Renner's, Hardy's, Patra et al's, and Ruebeck  et al's) actually at best only rule out wavefunction overlap, and not the wavefunction representing knowledge as is usually claimed.
+Even in the ontological models framework, models can be simultaneously ontic and epistemic --- the wavefunction can represent both elements of reality, and elements of an observer's knowledge about that reality. Harrigan's and Spekkens's terms, $\psi$-ontic and $\psi$-epistemic, do not formalise the informal ideas correctly. In light of the above analysis, all current no-go theorems for the wavefunction representing knowledge (such as the PBR theorem, Colbeck and Renner's, Hardy's, Patra et al's, and Ruebeck  et al's) actually at best only rule out wavefunction overlap, and not the wavefunction representing knowledge as is usually claimed.
 
 \begin{acknowledgements} \textit{Acknowledgements:} We thank Hatim Salih and Karim Thebault for useful discussions. This work was supported by the University of York's EPSRC DTP grant EP/R513386/1, and the Quantum Communications Hub funded by the EPSRC grant EP/M013472/1.\\
-\textit{Author Contribution Statement (CRediT):} JRH - Conceptualisation, Methodology, Writing (Original Draft), Visualisation; JR - Supervision, Writing (Review and Editing), Funding acquisition; JL - Conceptualisation, Methodology, Writing (Review and Editing), Supervision\\
+\textit{Author Contribution Statement (CRediT):} JRH --- Conceptualisation, Methodology, Writing (Original Draft), Visualisation; JR --- Supervision, Writing (Review and Editing), Funding acquisition; JL --- Conceptualisation, Methodology, Writing (Review and Editing), Supervision\\
 \textit{Competing Interest Statement:} The authors declare that there are no competing interests.
 \end{acknowledgements}
 
@@ -203,19 +203,19 @@ Even in the ontological models framework, models can be simultaneously ontic and
 \bibliography{ref.bib}
 
 \appendix
-\section{Appendix - Analogous Concepts}
+\section{Appendix --- Analogous Concepts}
 The thermodynamic entropy $S$ of a system is also a candidate for being both ontic and epistemic. The entropy assigned to a system depends on knowledge of it. For instance, the entropy assigned to an equally divided box of particles is higher if an observer can distinguish these particles than if they cannot \cite{Cheng2009Thermodynamics}. However, that doesn't mean either that one entropy is correct and the other is not, nor that they are both solely expressions of knowledge and so equally `correct' (as would be analogous to Harrigan's and Spekkens's definitions of $\psi$-ontology and $\psi$-epistemicism respectively). Instead, both represent the system as it is independently of us to some extent, while also representing what is known about it \cite{Ladyman2008UseofITEntropy}.
 
 While the ontological models framework considers pure, rather than mixed states, the latter also seem to represent both the underlying state of a system and knowledge of it, to produce overlapping states in the theory for the same real state of the world. An example of this is the singlet state of spin. If we trace out one subsystem to consider the other, lack of knowledge about the other subsystem makes the state of each maximally mixed in every basis, and there is no possible pure state about which we could be ignorant (because there is no pure state of one particle's spin which is empirically equivalent to the maximally mixed state of spin in every basis). Despite this, something about the world independently of what we know about is represented by the maximally mixed state because it gives the correct relative frequencies for measurements on just one particle.\footnote{Similarly, if we believe a state is an equal mix of $\upket_x$ and $\downket_x$, but it is actually the pure state $\upket_z$, neither the mixed or pure state would wrongly describe the results of an $x$-measurement: they would just reflect differing knowledge of the system.} Caves et al give an account where it is consistent for different observers to believe a situation represented by different states, but for all observers to believe the state pure (though this is for a situation where no underlying real state is assumed) \cite{Caves2002conditions}.
 
-\section{Appendix - Issues with an Assumed Underlying State \texorpdfstring{$\lambda$}{lambda}}
-As mentioned above, there are a number of issues with the idea of an underlying state assumed by the Ontological Models Framework. Classically, points in state space define exact values for all observables (e.g. a point in (3+3)-dimensional position-momentum state space gives the exact position and momentum of an object), so associating a real possible state-of-the-world to each point ensures all values are simultaneously single-valued. However, if we try and say a single point in a state space corresponds to a real quantum state-of-the-world, it enforces locality of hidden variables, so violates Bell's theorem. \footnote{The only major interpretation of quantum physics in which this is not the case is in Bohmian mechanics, where the state-of-the-world would pin down the quantum potential - but existence as real values would reinforce the nonlocality-vs-special-relativity issue (as information sent nonlocally would definitively be writ onto the state-of-the-world, so this nonlocal communication would be, to use Shimony's terms, action, rather than passion, at a distance \cite{Shimony1984Passion}).}
+\section{Appendix --- Issues with an Assumed Underlying State \texorpdfstring{$\lambda$}{lambda}}
+As mentioned above, there are a number of issues with the idea of an underlying state assumed by the Ontological Models Framework. Classically, points in state space define exact values for all observables (e.g. a point in (3+3)-dimensional position-momentum state space gives the exact position and momentum of an object), so associating a real possible state-of-the-world to each point ensures all values are simultaneously single-valued. However, if we try and say a single point in a state space corresponds to a real quantum state-of-the-world, it enforces locality of hidden variables, so violates Bell's theorem. \footnote{The only major interpretation of quantum physics in which this is not the case is in Bohmian mechanics, where the state-of-the-world would pin down the quantum potential --- but existence as real values would reinforce the nonlocality-vs-special-relativity issue (as information sent nonlocally would definitively be writ onto the state-of-the-world, so this nonlocal communication would be, to use Shimony's terms, action, rather than passion, at a distance \cite{Shimony1984Passion}).}
 
-Further, there is an issue with representing a projective measurement in this form, if one assumes all values are simultaneously single-valued - given, if we assume all system evolution except measurement is deterministic (as quantum mechanics does), it implies measurement must physically disturb the system in a random way to replicate our observations.
+Further, there is an issue with representing a projective measurement in this form, if one assumes all values are simultaneously single-valued --- given, if we assume all system evolution except measurement is deterministic (as quantum mechanics does), it implies measurement must physically disturb the system in a random way to replicate our observations.
 
-Alternatively, this underlying real state could be multi-valued - variables could have a number of values simultaneously. However, this is very similar to the wavefunction - making us ask (with the exception of to represent an observer's knowledge above any beyond this), why we need a wavefunction separate to this underlying state.
+Alternatively, this underlying real state could be multi-valued --- variables could have a number of values simultaneously. However, this is very similar to the wavefunction --- making us ask (with the exception of to represent an observer's knowledge above any beyond this), why we need a wavefunction separate to this underlying state.
 
-Another issue, specifically with the idea of the real underlying state of the world assumed by the ontological models formalism, is that both the response function for a variable at an initial state, and the probability that a situation represented by a given wavefunction being in a given state, are real probabilities, rather than quasiprobabilities - they are always non-negative, and sum additively. This is unlike quantum `probability amplitudes', which are really quasiprobabilities - they can be negative or even imaginary, and so can interfere destructively with one another. This negative probability interference is a key part of quantum mechanics, explaining peculiar phenomena such as the sequential Stern-Gerlach experiment \cite{Sakurai2017Modern}, the Elitzur-Vaidman Bomb Detector \cite{Elitzur1993BombDet}, and counterfactual communication \cite{Salih2013CFComms,Hance2019Quantum} and imaging \cite{Hance2020CFGI}. It is unclear how the real non-negative probabilities of this real underlying state-of-the-world could replicate these effects - casting doubt on this framework.
+Another issue, specifically with the idea of the real underlying state of the world assumed by the ontological models formalism, is that both the response function for a variable at an initial state, and the probability that a situation represented by a given wavefunction being in a given state, are real probabilities, rather than quasiprobabilities --- they are always non-negative, and sum additively. This is unlike quantum `probability amplitudes', which are really quasiprobabilities --- they can be negative or even imaginary, and so can interfere destructively with one another. This negative probability interference is a key part of quantum mechanics, explaining peculiar phenomena such as the sequential Stern-Gerlach experiment \cite{Sakurai2017Modern}, the Elitzur-Vaidman Bomb Detector \cite{Elitzur1993BombDet}, and counterfactual communication \cite{Salih2013CFComms,Hance2019Quantum} and imaging \cite{Hance2020CFGI}. It is unclear how the real non-negative probabilities of this real underlying state-of-the-world could replicate these effects --- casting doubt on this framework.
 
 Oldofredi et al discuss additional issues with this underlying real state assumption in \cite{Oldofredi2020Classification}.
 
